# AI_CAE_Automation

./: .gitattributes  .gitignore  AGENTS.md  README.md  README.zh-CN.md  beam_modal.odb  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: simulation-task.md
.github/workflows/: docs-check.yml
AI-CAE-Automation-Lab/: README.md  README.zh-CN.md  drilling_model.cae
AI-CAE-Automation-Lab/AI-CAE-Automation-Lab/: README.md  README.zh-CN.md  pyproject.toml
AI-CAE-Automation-Lab/checklists/: electrical-cad-evidence-chain.md  evidence-chain.md
AI-CAE-Automation-Lab/codex-skills/: README.md
AI-CAE-Automation-Lab/configs/: README.md  toolbox.example.json
AI-CAE-Automation-Lab/docs/: codex-mcp-skill-setup.md  knowledge-map.md  local-mcp-source-audit.md  mcp-toolbox-roadmap.md
AI-CAE-Automation-Lab/mcp/: README.md  client-config.example.json  codex-config.example.toml  solver-bridge-toolbox.md
AI-CAE-Automation-Lab/prompts/: ai-cae-general.md  pcschematic-direct-motor-starter.md
AI-CAE-Automation-Lab/scripts/: env_check.py  install_codex_assets.py
Skill/: README.md
checklists/: comsol-ehd-soybean-evidence-chain.md  electrical-cad-evidence-chain.md  evidence-chain.md  fluent-weld-pool-evidence-chain.md  smoke-test.md
codex-skills/: README.md
codex-skills/abaqus-evidence-simulation/: SKILL.md
codex-skills/ai-cae-run-manager/: SKILL.md
configs/: README.md  local.toolchain.schema.json  local.toolchain.template.json  toolbox.example.json
docs/: architecture.md  codex-mcp-skill-setup.md  deep-solver-bridge-mcp.md  electrical-cad-automation.md  fluent-weld-pool-automation.md  github-release-plan.md  knowledge-map.md  local-mcp-source-audit.md  mcp-toolbox-roadmap.md  mit-reference-and-mcp-restructure.md  software-matrix.md  workflow.md
mcp/: LICENSE.md  MANIFEST.json  README.md  THIRD_PARTY_NOTICES.md  client-config.example.json  codex-config.example.toml  solver-bridge-toolbox.md
mcp/ansys/Workbench MCP/: .env.example  README.md  pyproject.toml  server.py
mcp/ansys/Workbench MCP/examples/: codex-config.example.toml
mcp/comsol/: .env.example  README.md  adapter.json  pyproject.toml  server.py
mcp/comsol/bridge/: README.md
mcp/comsol/examples/: codex-config.example.toml
mcp/comsol/tests/: README.md
mcp/paraview/: .env.example  README.md  adapter.json  pyproject.toml  server.py
mcp/paraview/examples/: codex-config.example.toml
prompts/: abaqus-explicit-drilling.md  ai-cae-general.md  comsol-ehd-soybean-drying.md  comsol-heat-transfer.md  fluent-external-flow.md  fluent-sinusoidal-weld-pool.md  fluent-sinusoidal-weld-pool.zh-CN.md  pcschematic-direct-motor-starter.md
scripts/: env_check.py  install_codex_assets.py
tests/: test_toolbox_core.py
(+161 files in other folders)
