[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cae-automation-lab"
version = "0.2.0"
description = "Utilities and documentation for AI-assisted CAE automation workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AI CAE Automation Lab" }]
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0,<2.0"]
dev = ["pytest>=8.0,<9.0", "ruff>=0.5,<1.0"]

[project.scripts]
ai-cae-env-check = "ai_cae_lab.env_check:main"
ai-cae-toolbox = "ai_cae_lab.toolbox:main"
ai-cae-mcp-server = "ai_cae_lab.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
