[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cae-workbench-mcp"
version = "0.2.0"
description = "Ansys Workbench-focused MCP entry point for AI CAE Automation Lab."
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["mcp>=1.0,<2.0"]

[project.scripts]
ai-cae-workbench-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]
